# staba

./: Architecture.md  DIDS.md  ProjectStructure.md  README.md  StorachaIntegration.md  diagnosis_generator_agent.py  models.py  package.json  pnpm-lock.yaml  pyproject.toml  symptom_collector_agent.py  symptoms.json
agents/: diagnosis_agent.json  symptom_collector.json  test_bot.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/: DiagnosisDisplay.tsx  SymptomForm.tsx
frontend/src/types/: index.ts
